# cfmn

./: .dockerignore  .env.template  .gitignore  CNAME  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  index.html
assets/: index-BJWOGqsj.js  index-jWQLnNtu.js
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-07950026640cd5b947b7350e57f37b103ac4d7e7f54e082baef9c7bdbad064d4.json  query-2f25c90c60e8196d459d030487960204256b53bc1e7f11e9a4ef32bbac511d1d.json  query-340c7b6a1f727ce6c86065979b842a17e616115f01f48396020aa5177cf94221.json  query-3785ac010f3c64b3ea5af25006965ea43d8ae4a5422c96bdac9064a2d58d0d5b.json  query-410f49d7d32ce0626ca04e53ebc66d0b97bfe3485be1747cc0921f4e867798d1.json  query-6415b5308cb626a14ce2ebaf6349b67b8a00c154d31ec3c2244294ccbab1234b.json  query-778627d5a4e3ffeebe83412643ca5a5b2932525526a58778334283bd3efccf52.json  query-7b0389d38dfc559a58fe2e9a6daba8c0fd6a7549c95fddf79fa63107afda088b.json  query-93a08fa3505e5f48441fee5a08498db1ab18c37cf57b7f24ac3ea7ffbfa80521.json  query-960757af4554f9253b6e2bab033faab9ee8b634ce6ddbfda182df6c1d6bf1d6a.json  query-a243de937ca2751858776b154288610b9326a8a391c1a20f23b36b526467f50b.json  query-a7f2bf090dee2a17420d15d1ac5f0aef5c56c89c5c16f8b443cc014ca63fc775.json  query-d6b464ea5ecd8d0d0e01f730dc615fee88ff3753808a3d4224ff0d2491d9f4d8.json  query-e583f2325b934e41e4f2583e5a08ffa4b533cb6aef93c2f6dcb724936df3adb4.json
backend/src/: env.rs  main.rs  pathutils.rs
backend/src/api/: auth.rs  errors.rs  mod.rs  models.rs  router.rs
backend/src/api/handlers/: auth.rs  misc.rs  mod.rs  notes.rs  search.rs  users.rs  votes.rs
backend/src/db/: db.rs  errors.rs  mod.rs  models.rs
backend/src/db/handlers/: mod.rs  notes.rs  users.rs  votes.rs
database/: init.sql
frontend/: .env.local.template  .env.production  index.html  package-lock.json  package.json  tailwind.config.js
metaploy/: cfmn.metaploy.conf
(+25 files in other folders)
