[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
serde = { version = "1.0.195", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "postgres", "chrono", "uuid" ] }
tower-http = { version = "0.5.1", features = ["cors"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
axum-extra = { version = "0.9.2", features = ["multipart"] }
